# swarm

./: .gitignore  LICENSE  PLAN.csv  README.md  package-lock.json  package.json
swarm_translate/: .env.example  README.md  consolidate.py  hello.py  pyproject.toml  run_all_scenarios.py  style_and_register.json  translate_agents.py  translate_agents_consistency.py  translate_agents_deepseek_largerwindow.py  translate_agents_groq.py  translate_agents_openai.py  translate_agents_togetherai.py  translate_deepseek_largerwindow.py  translate_dspy.py  translate_dspy_feedback_optimizer.py  translate_formal.py  translate_groq_largerwindow.py  translate_ollama.py  translate_openai_largerwindow.py  translation_scenario.py
swarm_translate/scenarios/: bible_afr_natural.json  bible_ara_natural.json  bible_ben_formal.json  bible_cmn_formal.json  bible_deu_natural.json  bible_eng_formal.json  bible_eng_millennial.json  bible_eng_natural.json  bible_fra_formal.json  bible_fra_natural.json  bible_fra_test.json  bible_hin_formal.json  bible_ind_natural.json  bible_jpn_formal.json  bible_kor_formal.json  bible_mal_natural.json  bible_mnp_formal.json  bible_npi_natural.json  bible_por_formal.json  bible_por_natural.json  bible_spa_natural.json  bible_spa_natural_openai.json  bible_tpi_formal.json  bible_tpi_natural.json
swarm_translate/scenarios/consolidated/: bible_consolidated.jsonl  (+10 more)
swarm_translate/scripts/: anomaly_detection.py  consolidate.py  consolidate_luke.py  create_jsonl_source.py  dedupfrench.py  dedupfrench_programmatic.py  integrated_check.py  staged_markov_alignment.py
(+388 files in other folders)
