[project]
name = "swarm-translate"
version = "0.1.0"
description = "Multi-agent translation system using OpenAI Swarm and local LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "swarm @ git+https://github.com/openai/swarm.git",
    "openai",
    "torch>=2.0.0",
    "transformers>=4.31.0",
    "sentencepiece",
    "safetensors",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.10",
    "groq>=0.13.1",
    "dspy>=2.6.24",
]
